* fix text overflow issues on edit event page form

--- a/src/assets/scss/_event.scss
+++ b/src/assets/scss/_event.scss
@@ -290,6 +290,12 @@
   }
 }
 
+.event-box__variable--truncated {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .event-box__variable:first-child {
   margin-left: 0;
 }
